test/types/tuple/const/tupleBlankFormalConstArg.good
tupleBlankFormalConstArg.chpl:9: error: element 1 of tuple tup is const and cannot be modified
tupleBlankFormalConstArg.chpl:10: note: possibly set here
